<resources>
    <string name="app_name">ArtGallery</string>


    <string name="button_addPainting">Add Painting</string>
    <string name="hint_paintingTitle">Painting Title</string>
    <string name="hint_paintingDescription">Description </string>
    <string name="hint_paintingGrade">Grade </string>
    <string name="hint_paintingOther">Other </string>
    <string name="menu_cancelPainting">Cancel</string>

    <string name="menu_addPainting">Add</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_report">Report</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="total">Total so Far</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="donateButton">Donate</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="enter_painting_title"> Please enter a Painting Title </string>
    <string name="save_painting"> Save Painting </string>

    <string name="select_painting_image">Select painting image</string>
    <string name="change_painting_image">Change painting image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="google_maps_key">INSERT KEY HERE</string>
    <string name="menu_deletePainting">Delete</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="title_activity_painting_maps">Map of All Paintings </string>
    <string name="painting_image_placeholder">Painting Imagee</string>
    <string name="painting_title_placeholder">Painting Title</string>
    <string name="painting_description_placeholder">Painting Description</string>
    <string name="button_addImage"> Add Image </string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="signed_out">Signed Out</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="menu_report_all">All Donations</string>
    <string name="reportTitle">Donations Report</string>
    <string name="defaultAmount">00</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="defaultMethod">N/A</string>
    <string name="action_donate">Donate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="favourites_title">Favourite Donations</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please Give Generously</string>

    <string name="aboutus_title">Homer for President !!</string>
    <string name="aboutus_message">Welcome to the new painting system for artists\n\nStore you paintings easily \n\n</string>
    <string name="action_edit">Edit Donation</string>


    <string name="action_report">Report</string>

    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="amount">Amount</string>

    <string name="totalSoFar">$ Total</string>


    <string name="title_activity_home">Home</string>





    <string name="messageLoading">Please wait while we Connect to the Server...</string>

    <string name="action_update">Update</string>
    <string name="message_edit">Please Update your Details Below</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>

    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="firebase_user_management">Firebase User Management</string>



    <string name="select_profile_image">Select Profile Image</string>

</resources>

