<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaintingActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/black">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/design_default_color_surface" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/paintingTitle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_paintingTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:background="@color/purple_200"/>

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_paintingDescription"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="2"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:background="@color/purple_200"/>



                <EditText
                    android:id="@+id/Other"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_paintingOther"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:background="@color/purple_200"/>


                <EditText
                    android:id="@+id/Paint"
                    android:layout_width="114dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="140dp"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:autofillHints="Please Enter an Amount"
                    android:background="@color/purple_200"
                    android:ems="10"
                    android:hint="Year painted"
                    android:inputType="number"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.888"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.781" />

                <ImageView
                    android:id="@+id/paintingImage"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/ic_baseline_image_search_24"
                    tools:ignore="VectorDrawableCompat" />


                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="389dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/purple_200"
                    android:paddingTop="8dp"
                    android:shadowColor="@color/black"
                    android:paddingBottom="25dp"
                    android:textColorHint="@color/black"
                    android:text="@string/button_addImage"
                    android:textSize="16sp"
                    />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="125dp"
                    android:background="@color/purple_200"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addPainting"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginLeft="125dp" />


            </LinearLayout>

        </ScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btm_nav"
            android:layout_alignParentBottom="true"
            android:background="@color/purple_200"
            app:menu="@menu/bottom_nav"

            />

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btm_nav"
            android:layout_marginBottom="-56dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

